[project]
name = "num-seq-env"
description = "Inductive reasoning over numeric sequences governed by order-2 linear recurrence relations"
tags = ["single-turn", "math", "reasoning", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["num_seq_env.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 50
rollouts_per_example = 1
